gcc/testsuite/rust/rustc/ui/self/arbitrary_self_types_needing_mut_pin_dg.rs
//@ run-rustfix
use std::pin::Pin;
struct S;

impl S {
    fn x(self: Pin<&mut Self>) {
    }
}

fn main() {
    S.x(); // { dg-error ".E0599." "" { target *-*-* } }
}

